change gnureadline to pyreadline3

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 playwright
-gnureadline; platform_system=="Linux"
+pyreadline3; platform_system=="Linux"
 pyreadline3; platform_system=="Windows"
 rich
